# rustkorg

./: .gitignore  Cargo.toml  LICENSE  MUTE_BUTTONS.md  README.md  START_HERE.txt  architecture.md  audio_sinks.sh  config.toml  korg-midi-volume.desktop  run.sh  setup.sh  sinks_setup.sh
.github/workflows/: ci.yml  publish.yml  release.yml
src/: app.rs  config.rs  main.rs  midi.rs  pipewire_control.rs  spectrum.rs  ui.rs
src/panels/: console.rs  control.rs  mod.rs  settings.rs  theme.rs  visualizer.rs
