[package]
name = "korg-midi-volume"
version = "0.1.0"
edition = "2021"

[dependencies]
midir = "0.9"
egui = "0.33"
eframe = { version = "0.33", features = ["default_fonts"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
libpulse-binding = "2.28"
libpulse-simple-binding = "2.28"
shellexpand = "3.0"
rustfft = "6.2"
image = "0.24"

[profile.release]
opt-level = 3
lto = true
